--- a/.github/workflows/daily_data_export.yml
+++ b/.github/workflows/daily_data_export.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r job/requirements.txt
       
       - name: Run data export job
         env:
@@ -34,7 +34,7 @@ jobs:
           AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
           AZURE_CONTAINER_NAME: ${{ secrets.AZURE_CONTAINER_NAME }}
         run: |
-          python data_export_job.py
+          python job/data_export_job.py
       
       - name: Job completion notification
         if: success()
